# opensource-utils

./: .gitignore  .project  README.md  build.sh  pom.xml  sonar-pom.xml  versionbump.sh
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/.pc/03_fix_hurd.diff/src/: freeglut_joystick.c
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/.pc/05_gold.diff/progs/demos/Lorenz/: Makefile.am
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/.pc/05_gold.diff/progs/demos/spaceball/: Makefile.am
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/debian/: changelog  control  rules
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/debian/patches/: 04_ld_no_add_needed.diff  05_gold.diff  series
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/doc/: Makefile.in
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/include/: Makefile.in
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/include/GL/: Makefile.in
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/progs/demos/Fractals_random/: Makefile.am
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/progs/demos/Lorenz/: Makefile.am
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/progs/demos/spaceball/: Makefile.am
commons/hu.qgears.opengl.commons/native/freeglut-2.6.0/src/: Makefile.am  Makefile.in  freeglut_internal.h  freeglut_joystick.c  freeglut_main.c  freeglut_window.c
coolrmi/: README.md
msys/: .gitignore  make-windep.sh  pacman.conf
(+1163 files in other folders)
